src/objects/slackv2__Subscription_Event__e.object
<CustomObject>
    <label>Subscription Event</label>
    <pluralLabel>Subscription Events</pluralLabel>
    <fields>
        <fullName>slackv2__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Record_Data__c</fullName>
        <label>Record Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>slackv2__Subscription_Id__c</fullName>
        <label>Subscription Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>